# KinectSLAM6D

./: CMakeLists.txt  Doxyfile  PairwiseAlignmentSteps.cpp  README  clean_generated_files.sh  clean_libraries.sh  kinect6DSLAM.cpp
cmake/: FindBoost.cmake
doc/: Instalar CUDA 4.0 Ubuntu 11.04 Macbook  Instalar MRPT Ubuntu 11.04 Macbook  Instalar trunk PCL
doc/html/: _frame_r_g_b_d_8h_source.html  _graph_optimizer_8h_source.html  _graph_optimizer___g2_o_8h_source.html  _graph_optimizer___m_r_p_t_8h_source.html  _i_c_p_pose_refiner_8h_source.html  _i_c_p_pose_refiner___p_c_l_8h_source.html  _i_c_p_pose_refiner___stanford_g_i_c_p_8h_source.html  _keyframe_loop_detector_8h_source.html  _kinect_grabber_8h_source.html  _kinect_grabber___m_r_p_t_8h_source.html  _kinect_grabber___open_n_i_8h_source.html  _kinect_grabber___rawlog_8h_source.html  _miscellaneous_8h_source.html  _point_cloud_downsampler_8h_source.html  _point_cloud_viewer_8h_source.html  _point_cloud_viewer___m_r_p_t_8h_source.html  _visual3_d_rigid_transformation_estimator_8h_source.html  _visual3_d_rigid_transformation_estimator___r_a_n_s_a_c_8h_source.html  _visual3_d_rigid_transformation_estimator___s_v_d_8h_source.html  _visual_feature_descriptor_extractor_8h_source.html  _visual_feature_descriptor_extractor___generic_8h_source.html  _visual_feature_descriptor_extractor___o_r_b_8h_source.html  _visual_feature_descriptor_extractor___s_u_r_f___g_p_u_8h_source.html  _visual_feature_matcher_8h_source.html  _visual_feature_matcher___generic_8h_source.html  annotated.html  class_frame_r_g_b_d.html  class_graph_optimizer.html  class_graph_optimizer___g2_o.html  class_graph_optimizer___m_r_p_t.html  class_i_c_p_pose_refiner.html  class_i_c_p_pose_refiner___p_c_l.html  class_i_c_p_pose_refiner___stanford_g_i_c_p.html  class_keyframe_loop_detector.html  class_kinect_grabber.html  class_kinect_grabber___m_r_p_t.html  class_kinect_grabber___open_n_i.html  class_kinect_grabber___rawlog.html  class_point_cloud_downsampler.html  class_point_cloud_viewer.html  (+20 more)
doc/html/search/: all_61.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_69.html  all_6b.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_71.html  all_72.html  all_73.html  all_76.html  classes_66.html  classes_67.html  classes_69.html  classes_6b.html  classes_70.html  classes_74.html  classes_76.html  functions_64.html  functions_66.html  functions_67.html  functions_6b.html  functions_70.html  functions_72.html  functions_76.html  search.js  variables_64.html  variables_67.html  variables_68.html  variables_69.html  variables_6b.html  variables_70.html  variables_72.html
doc/latex/: annotated.tex  class_frame_r_g_b_d.tex  class_graph_optimizer.eps  class_graph_optimizer.tex  class_graph_optimizer___g2_o.eps  class_graph_optimizer___g2_o.tex  class_graph_optimizer___m_r_p_t.eps  class_graph_optimizer___m_r_p_t.tex  class_i_c_p_pose_refiner.eps  class_i_c_p_pose_refiner.tex  class_i_c_p_pose_refiner___p_c_l.eps  class_i_c_p_pose_refiner___p_c_l.tex  class_i_c_p_pose_refiner___stanford_g_i_c_p.eps  class_i_c_p_pose_refiner___stanford_g_i_c_p.tex  class_keyframe_loop_detector.tex  class_kinect_grabber.eps  class_kinect_grabber.tex  class_kinect_grabber___m_r_p_t.eps  class_kinect_grabber___m_r_p_t.tex  class_kinect_grabber___open_n_i.eps  class_kinect_grabber___open_n_i.tex  class_kinect_grabber___rawlog.eps  class_kinect_grabber___rawlog.tex  class_point_cloud_downsampler.tex  class_point_cloud_viewer.eps  class_point_cloud_viewer.tex  class_point_cloud_viewer___m_r_p_t.eps  class_point_cloud_viewer___m_r_p_t.tex  class_visual3_d_rigid_transformation_estimator.eps  class_visual3_d_rigid_transformation_estimator.tex  class_visual3_d_rigid_transformation_estimator___r_a_n_s_a_c.eps  class_visual3_d_rigid_transformation_estimator___r_a_n_s_a_c.tex  class_visual3_d_rigid_transformation_estimator___s_v_d.eps  class_visual3_d_rigid_transformation_estimator___s_v_d.tex  class_visual_feature_descriptor_extractor.eps  class_visual_feature_descriptor_extractor.tex  class_visual_feature_descriptor_extractor___generic.eps  class_visual_feature_descriptor_extractor___generic.tex  class_visual_feature_descriptor_extractor___o_r_b.eps  class_visual_feature_descriptor_extractor___o_r_b.tex  (+12 more)
g2o/.svn/: all-wcprops  entries
gicp/.svn/: dir-prop-base  entries
include/: CKinect2DRawlog.h  FrameRGBD.h  GraphOptimizer.h  GraphOptimizer_G2O.h  GraphOptimizer_MRPT.h  ICPPoseRefiner.h  ICPPoseRefiner_PCL.h  ICPPoseRefiner_StanfordGICP.h  KeyframeLoopDetector.h  KeyframeLoopDetector.h~  KinectGrabber.h  KinectGrabber_MRPT.h  KinectGrabber_OpenNI.h  KinectGrabber_Rawlog.h  KinectGrabber_Rawlog2.h  Miscellaneous.h  PointCloudDownsampler.h  PointCloudViewer.h  PointCloudViewer_MRPT.h  Visual3DRigidTransformationEstimator.h  Visual3DRigidTransformationEstimator_RANSAC.h  Visual3DRigidTransformationEstimator_SVD.h  VisualFeatureDescriptorExtractor.h  VisualFeatureDescriptorExtractor_Generic.h  VisualFeatureDescriptorExtractor_ORB.h  VisualFeatureDescriptorExtractor_SURF_GPU.h  VisualFeatureMatcher.h  VisualFeatureMatcher_Generic.h  mainpage.h
matlab/: 3DGeometry.m  README  README~  octave-core  plotArrow.m~  plotPose.m~  plot_odometry.m  plot_odometry.m~  plot_odometry2.m~  plot_odometry_path.m  pose.m
results/: plotPose.m
src/: CKinect2DRawlog.cpp  FrameRGBD.cpp  GraphOptimizer_G2O.cpp  GraphOptimizer_MRPT.cpp  ICPPoseRefiner_PCL.cpp  ICPPoseRefiner_StanfordGICP.cpp  KeyframeLoopDetector.cpp  KinectGrabber_MRPT.cpp  KinectGrabber_OpenNI.cpp  KinectGrabber_Rawlog.cpp  KinectGrabber_Rawlog2.cpp  Miscellaneous.cpp  PointCloudDownsampler.cpp  PointCloudViewer_MRPT.cpp  Visual3DRigidTransformationEstimator_RANSAC.cpp  Visual3DRigidTransformationEstimator_SVD.cpp  VisualFeatureDescriptorExtractor_Generic.cpp  VisualFeatureDescriptorExtractor_ORB.cpp  VisualFeatureDescriptorExtractor_SURF_GPU.cpp  VisualFeatureMatcher_Generic.cpp
tools/rgbd_benchmark_tools/: add_pointclouds_to_bagfile.py  evaluate_rpe.py  generate_pointcloud.py
(+10 files in other folders)
